# ComputorV1

./: Cargo.toml  computor.py  gentplot.py
src/: lib.rs  main.rs  node.rs  parser.rs  polynomial.rs  tokenizer.rs  visualizer.rs
src/types/: function.rs  mod.rs  polynomial.rs  rational.rs  variable.rs
tests/: integration_test.rs  integration_tests.rs
