[package]
name = "computorv1"
version = "0.1.0"
authors = ["nanderstabel <nanderstabel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
anyhow = "1.x"

[dev-dependencies]
indoc = "1.x"
assert_cmd = "2.x"
predicates = "2.x"
pretty_assertions = "1.x"
dot = "0.1.x"
